<resources>
    <string name="app_name">Farmer Guide</string>
    <string name="FACEBOOK_APP_ID">568815240254142</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">ae063e9361ed10beafe54c28799e8c23</string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="weathertitle">ယနေ့ မိုးလေဝသအခြေအနေ</string>
    <string name="otherfruit">အခြားသီးနှံများ</string>
    <string name="showmore">အပြည့်စုံဖတ်ရန်</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="phone_call">Phone Call Argicultural Office</string>
    <string name="welcome">တောင်သူလက်စွဲ မှကြိုစိုပါ၏</string>
    <string name="message_enter_phone">သင်၏ ဖုန်းနံပါတ် ကိုရိုက်ထည့်ပါ</string>
    <string name="message_warn">စတက်အသုံးပြုရန် သင်၏ ဖုန်းနံပါတ်အား ၀၉ ပါအောင် ရိုက်ပေးပါ \n ပြီးနောက် အစိမ်းရောင် ခလုပ်အား နိုပ်ပေးပါ</string>
    <string name="verify_code_send_wating">အတည်ပြုကုတ် ပေးပို့နေပါသဖြင့် ခဏစောင့်ပေးပါ . . . </string>
    <string name="user_id_checking">အသုံးပြုသူအချက်အလက်များကို စစ်ဆေးနေပါသည်</string>
    <string name="verify_code_error">အတည်ပြုကုတ်မှားနေပါသည် </string>
    <string name="too_many_request">ယနေ့တွက်ဝင်ရောက်ခြင်း ပြီးဆုံးပါပြီ\nမနက်ဖြန်မှ ပြန်လည်ဝင်ရောက်ပါ </string>
    <string name="errr_info">သင်၏ အကောင့် ဝင်ရောက်ခြင်း အမှားအယွင်းရှိပါသည်</string>
    <string name="resend_verify_code">အတည်ပြုကုပ် ပြန်လည်ပေးပို့နေပါသည် ...</string>
    <string name="type">အမျိုးအစား</string>
    <string name="count">အရေအတွက်</string>
    <string name="price">ဈေးနှုန်း</string>
    <string name="pku_argi_off">ပခုက္ကူ စိုက်ပျိုးရေးရုံး</string>
    <string name="m_argi_off">မြိုင် စိုက်ပျိုးရေးရုံး</string>
    <string name="y_argi_off">ရေစကြို စိုက်ပျိုးရေးရုံး</string>
    <string name="pa_argi_off">ပေါက် စိုက်ပျိုးရေးရုံး</string>
    <string name="argi_phone_title">စိုက်ပျိုးရေးဌာန ဖုန်းနံပါတ်များ</string>
    <string name="current_weather_forecast">Current Weather Forecast</string>
    <string name="registeration">Registeration</string>
    <string name="btn_continue">Continue</string>
    <string name="moe_rice">မိုးစပါး</string>
    <string name="q_and_a">အမေး / အဖြေ</string>
    <string name="news">သတင်းများ</string>
    <string name="argi_shops">စိုက်ပျိုးရေးပစ္စည်းဆိုင်များ</string>
    <string name="broken_center">ပွဲရုံများ</string>
    <string name="home_menu">ပင်မစာမျက်နှာ</string>
    <string name="whole_sale_center_menu">ကုန်စည်ဒိုင်</string>
    <string name="law_menu">လယ်ယာမြေဥပဒေ</string>
    <string name="shop_label">စိုက်ပျိုးရေးပစ္စည်းဆိုင်များ</string>
    <string name="pwayyone_label">ပွဲရုံများ</string>
    <string-array name="tab_array">
        <item>စိုက်ပျိုးနည်းစနစ်</item>
        <item>သီးနှံရောဂါ</item>
        <item>ဖျက်ပိုး</item>
    </string-array>
    <string-array name="township_list">
        <item>pakokku</item>
        <item>yesagyo</item>
    </string-array>

</resources>
