<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/loginbackground1"
    android:paddingLeft="50dp"
    android:paddingTop="15dp"
    android:paddingRight="50dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/white_color"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/white_color"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginBottom="50dp"
        android:text="@string/message_enter_phone"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fieldPhoneNumber"
        android:background="@drawable/borderedit"
        android:drawableLeft="@drawable/phone_call_admin"
        android:textColor="@color/white_color"
        android:maxLength="11"
        android:inputType="phone"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/white_color"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:text="@string/message_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnNext"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_marginTop="40dp"
        android:text="Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</android.support.v7.widget.LinearLayoutCompat>