<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PhoneActivity"
    android:background="#DCDCDC"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#fff"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/doa"
            />
        <TextView
            android:id="@+id/argi_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argi_phone_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/forcardviewradius"
        >
        <TextView
            android:id="@+id/pku_argi_off"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pku_argi_off"
            android:textSize="17dp"
            android:gravity="center_vertical"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:id="@+id/cpku"
            android:src="@drawable/ic_phone_black_24dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/forcardviewradius"
        >
        <TextView
            android:id="@+id/m_argi_off"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/m_argi_off"
            android:textSize="17dp"
            android:gravity="center_vertical"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_phone_black_24dp"
            android:id="@+id/cmy"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/forcardviewradius"
        >
        <TextView
            android:id="@+id/y_argi_off"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/y_argi_off"
            android:textSize="17dp"
            android:gravity="center_vertical"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_phone_black_24dp"
            android:id="@+id/cyso"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/forcardviewradius"
        >
        <TextView
            android:id="@+id/pa_argi_off"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pa_argi_off"
            android:gravity="center_vertical"
            android:textSize="17dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_phone_black_24dp"
            android:id="@+id/cpuk"/>
    </RelativeLayout>


</LinearLayout>